apps/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - name: web
      port: 3000
      targetPort: web
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
